add solution on jdk 1.9+